feat: add project reference

--- a/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Services\Catalog\Catalog.Application\Catalog.Application.csproj" />
+    <ProjectReference Include="..\Services\Catalog\Catalog.Core\Catalog.Core.csproj" />
+  </ItemGroup>
+
 </Project>
