--- a/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services\Catalog\Catalog.Application\Catalog.Application.csproj" />
-    <ProjectReference Include="..\Services\Catalog\Catalog.Core\Catalog.Core.csproj" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
