feat: add  CatalogContextSeed

--- a/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
+++ b/Services/Catalog/Catalog.Infrastructure/Catalog.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Catalog.Core\Catalog.Core.csproj" />
+  </ItemGroup>
+
 </Project>
