--- a/Services/Catalog/Catalog.API/appsettings.json
+++ b/Services/Catalog/Catalog.API/appsettings.json
@@ -1,16 +1,10 @@
 {
   "DatabaseSettings": {
     "ConnectionString": "mongodb://127.0.0.1:27017?readPreference=primary&ssl=false",
-    "DatabaseName": "ProductDb",
+    "DatabaseName": "CatalogoDb",
     "CollectionName": "Products",
     "BrandsCollection": "Brands",
     "TypesCollection": "Types"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
   },
   "AllowedHosts": "*"
 }
