feat: shopping cart response creation

--- a/Services/Basket/Basket.API/Basket.API.csproj
+++ b/Services/Basket/Basket.API/Basket.API.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Basket.Appication\Basket.Appication.csproj" />
+    <ProjectReference Include="..\Basket.Appication\Basket.Application.csproj" />
     <ProjectReference Include="..\Basket.Infrastructure\Basket.Infrastructure.csproj" />
   </ItemGroup>
 
