--- a/Services/Basket/Basket.Appication/Basket.Application.csproj
+++ b/Services/Basket/Basket.Appication/Basket.Application.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="6.0.13" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <ProjectReference Include="..\Basket.Core\Basket.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Basket.Appication\Basket.Application.csproj" />
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Mappers\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
