--- a/Services/Discount/Discount.Application/Discount.Application.csproj
+++ b/Services/Discount/Discount.Application/Discount.Application.csproj
@@ -10,4 +10,16 @@
     <ProjectReference Include="..\Discount.Core\Discount.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapper\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.51.0" />
+  </ItemGroup>
+
 </Project>
